--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/appservice.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/templateservice.js"></script>
+    <script src="lib/jstorage.min.js"></script>
 </head>
 
 <body ng-app="starter">
