--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="lib/ng-cordova.js"></script>
     <script src="js/appservice.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/templateservice.js"></script>
