--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.min.js"></script>
-    <script src="lib/ionic-image-lazy-load.js"></script>
+    <script src="lib/lazy.js"></script>
+    
+    
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -21,6 +23,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="lib/ng-cordova.js"></script>
+<!--    <script src="lib/progressIndicator.js"></script>-->
     <script src="js/appservice.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/templateservice.js"></script>
